# anyuri

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  ruff.toml  sitemap.xml
.github/workflows/: lint.yml  release.yml  test.yml
api/anyuri/: index.html
api/exceptions/: index.html
api/providers/: index.html
api/utils/: index.html
comparison/: index.html
docs/: comparison.md  index.md  剛剛發布了 anyuri — 一個從 GliaCloud 內部工具中抽取出來的 .dockerfile
docs/api/: anyuri.md  exceptions.md  io.md  providers.md  utils.md
docs/superpowers/plans/: 2026-04-18-anyuri-implementation.md  2026-04-18-upload-download-implementation.md
docs/superpowers/specs/: 2026-04-18-opensource-anyuri-design.md  2026-04-18-upload-download-design.md
search/: search_index.json
src/anyuri/: __init__.py  _exceptions.py  _utils.py
src/anyuri/io/: __init__.py  _core.py  _registry.py
src/anyuri/io/_handlers/: _azure.py  _b2.py  _file.py  _gcs.py  _http.py  _r2.py  _s3.py
src/anyuri/providers/: __init__.py  _azure.py  _b2.py  _gcs.py  _r2.py  _s3.py
superpowers/plans/2026-04-18-anyuri-implementation/: index.html
superpowers/specs/2026-04-18-opensource-anyuri-design/: index.html
tests/: conftest.py  test_core.py  test_registry.py  test_utils.py
tests/__snapshots__/test_core/: test_anyuri[%e8.txt].json  test_anyuri[absolute.jpg].json  test_anyuri[filelocalhost1.jpgq=1].json  test_anyuri[filelocalhosttest_converter_download%5Bstoryblock%5D43b5f971a5c37b8cc008db83999d027d6d0b9b5c.mp4].json  test_anyuri[httpexample.com1.jpg].json  test_anyuri[httpexample.com1.jpgq=1].json  test_anyuri[httpsexample.comfoo....1.jpg].json  test_anyuri[httpsexample.comfoo..1.jpgq=1#fragment].json  test_anyuri[httpsexample.comfoo..1.jpgq=1].json  test_anyuri[httpsexample.comfoo2].json  test_anyuri[httpsexample.comfoo].json  test_anyuri[httpstest.com].json
tests/io/: conftest.py  test_core.py  test_registry.py
tests/io/handlers/: conftest.py  test_azure.py  test_b2.py  test_file.py  test_gcs.py  test_http.py  test_r2.py  test_s3.py
tests/providers/: test_azure.py  test_b2.py  test_gcs.py  test_r2.py  test_s3.py
